--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "copy-webpack-plugin": "^5.0.5",
     "core-js": "^2.6.5",
     "open-simplex-noise": "^1.6.0",
+    "terser-webpack-plugin": "^2.2.2",
     "three": "^0.105.2",
     "three-orbitcontrols": "^2.102.1",
     "tone": "^13.4.9",
